--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,7 +1,4 @@
-<<<<<<< HEAD
 {
-=======
-﻿{
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
@@ -11,7 +8,6 @@
       "sslPort": 44303
     }
   },
->>>>>>> 9fa3ee070bbc236932521d74f9fe5488fc1cfc21
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -22,15 +18,14 @@
       }
     },
     "UserAuthenticate": {
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "commandName": "Project",
-<<<<<<< HEAD
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "dotnetRunMessages": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "launchBrowser": true,
+      "launchUrl": "swagger"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
@@ -43,26 +38,5 @@
       "publishAllPorts": true,
       "useSSL": true
     }
-  },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:23474",
-      "sslPort": 44303
-    }
   }
 }
-=======
-      "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    }
-  }
-}
->>>>>>> 9fa3ee070bbc236932521d74f9fe5488fc1cfc21
